--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,6 @@
-blinker==1.9.0
-certifi==2025.4.26
-charset-normalizer==3.4.2
-click==8.2.0
-contourpy==1.3.2
-cycler==0.12.1
-filetype==1.2.0
-Flask==3.1.1
-flask-cors==5.0.1
-fonttools==4.58.0
-idna==3.7
-itsdangerous==2.2.0
-Jinja2==3.1.6
-kiwisolver==1.4.8
-MarkupSafe==3.0.2
-matplotlib==3.10.3
-numpy==2.2.5
-opencv-python==4.11.0.86
-opencv-python-headless==4.10.0.84
-packaging==25.0
-pillow==11.2.1
-pillow_heif==0.22.0
-pyparsing==3.2.3
-python-dateutil==2.9.0.post0
-python-dotenv==1.1.0
-PyYAML==6.0.2
-requests==2.32.3
-requests-toolbelt==1.0.0
-roboflow==1.1.64
-six==1.17.0
-tqdm==4.67.1
-urllib3==2.4.0
-Werkzeug==3.1.3
+flask==2.0.1
+flask-cors==3.0.10
+python-dotenv==0.19.0
+roboflow==1.0.9
+opencv-python==4.5.3.56
+gunicorn==20.1.0
